--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@tanstack/react-query": "^5.66.0",
     "@types/react-helmet": "^6.1.11",
+    "add": "^2.0.6",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,10 +40,14 @@
     "react-router-dom": "^7.1.5",
     "sass": "^1.83.4",
     "scss": "^0.2.4",
+    "separator": "^0.1.0",
+    "shadcn": "^2.3.0",
+    "sheet": "^0.2.0",
     "sonner": "^1.7.4",
     "sooner": "^1.1.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "tooltip": "^1.6.1",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
