--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jotai": "^2.11.3",
     "lucide-react": "^0.474.0",
     "motion": "^12.1.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
