--- a/package.json
+++ b/package.json
@@ -10,22 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.1",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jotai": "^2.11.3",
     "lucide-react": "^0.474.0",
+    "motion": "^12.10.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.56.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.5",
     "sass": "^1.83.4",
     "scss": "^0.2.4",
+    "sonner": "^2.0.3",
     "sooner": "^1.1.4",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
