--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "date-fns": "^4.1.0",
     "jotai": "^2.11.3",
     "lucide-react": "^0.474.0",
-    "motion": "^12.19.2",
+    "motion": "^12.20.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -44,6 +44,7 @@
     "sooner": "^1.1.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
